# StampDetectOCR

./: CMakeLists.txt  README.md
data/ocr/: ocr_5530.cfg  ocr_dict_5530.txt
data/yolo/: yolov3.cfg  yolov3.names
src/: PutText.cpp  PutText.h  dataStructures.h  demo.cpp
